# luckycoin

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: consts.rs  cpi.rs  error.rs  event.rs  instruction.rs  lib.rs  loaders.rs  sdk.rs
api/src/state/: bus.rs  config.rs  mod.rs  proof.rs  treasury.rs
doc/: claim.md  close.md  mine.md  open.md  stake.md  update.md  upgrade.md
program/: Cargo.toml
program/src/: claim.rs  close.rs  health.rs  initialize.rs  lib.rs  mine.rs  open.rs  reset.rs  stake.rs  update.rs  upgrade.rs
program/tests/: test.rs
