[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "A command line interface for Luckycoin cryptocurrency mining."
documentation = "https://luckycoin.meme"
repository = "https://github.com/luckycoin-meme/luckycoin"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
luckycoin-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
const-crypto = "0.1.0"
num_enum = "0.7"
mpl-token-metadata = "4.1.2"
drillx = { version = "2.0.0", features = ["solana"] }
array-const-fn-init = "0.1.1"
solana-program = "1.18"
steel = { features = ["spl"], version = "1.3.0" }
thiserror = "1.0"
spl-token = { version = "^4", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
spl-associated-token-account = { version = "^2.3", features = ["no-entrypoint"] }